Ported to Python 3.3.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
+*.pyc
+*.egg-info
 .installed.cfg
 bin/
 parts/
 develop-eggs/
-*.egg-info
+dist/
 ID
 TAGS
 tags
+
+.tox
 .coverage
+coverage
+coverage.xml
 htmlcov/
+
