--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,20 +1,13 @@
 [buildout]
-extends = ztk-versions-1.0.1.cfg
 develop = .
-parts = test coverage coverage-test coverage2-test coverage-report python tags
+parts = test coverage coverage-test coverage-report python
 versions = versions
-newest = false
-include-site-packages = false
 unzip = true
 
 [python]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 eggs = cipher.background [test]
 interpreter = python
-
-[tags]
-recipe = z3c.recipe.tag
-eggs = ${python:eggs}
 
 [test]
 recipe = zc.recipe.testrunner
@@ -22,7 +15,7 @@ eggs = ${python:eggs}
 defaults = ['--tests-pattern', '^f?tests$$', '-v']
 
 [coverage]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 eggs = coverage
 
 [coverage-test]
@@ -41,13 +34,8 @@ initialization =
   atexit.register(_when_done)
   c.start()
 
-[coverage2-test]
-recipe = zc.recipe.testrunner
-eggs = ${python:eggs}
-defaults = ['--coverage', '${buildout:directory}/coverage']
-
 [coverage-report]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 eggs = z3c.coverage
 scripts = coveragereport=coverage-report
 arguments =
@@ -55,11 +43,4 @@ arguments =
    '${buildout:directory}/coverage/report')
 
 [versions]
-# we're getting buildout 1.5.0 anyway from our bootstrap
-zc.buildout = 1.5.0
-
-# required by zc.buildout 1.5.0
-zc.recipe.egg = 1.3.0
-
-# required by zc.buildout 1.5.0 for include-site-packages=false to work
-zc.recipe.testrunner = 1.4.0
+zope.security = 4.0.0a5
